--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Layout from '../components/Layout.astro';
 import Hero from '../components/sections/Hero.astro';
 import About from '../components/sections/About.astro';
 import Experience from '../components/sections/Experience.astro';
+import Toolbox from '../components/sections/Toolbox.astro';
+import VibeCoding from '../components/sections/VibeCoding.astro';
 import Certifications from '../components/sections/Certifications.astro';
 import Contact from '../components/sections/Contact.astro';
 ---
@@ -11,6 +13,8 @@ import Contact from '../components/sections/Contact.astro';
   <Hero />
   <About />
   <Experience />
+  <Toolbox />
+  <VibeCoding />
   <Certifications />
   <Contact />
 </Layout>
